src/test/ui/llvm-asm/inline-asm-bad-operand.stderr
error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:22:29
   |
LL |         llvm_asm!("" :: "r"(""));
   |                             ^^

error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:27:37
   |
LL |         llvm_asm!("ret" : : "{rdi}"(target));
   |                                     ^^^^^^

error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:34:34
   |
LL |     unsafe { llvm_asm!("" :: "i"(hello)) };
   |                                  ^^^^^

error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:42:43
   |
LL |         llvm_asm!("movups $1, %xmm0"::"m"(arr));
   |                                           ^^^

error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:49:37
   |
LL |         llvm_asm!("mov sp, $0"::"r"(addr));
   |                                     ^^^^

error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:56:37
   |
LL |         llvm_asm!("mov sp, $0"::"r"(addr),
   |                                     ^^^^

error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/inline-asm-bad-operand.rs:57:37
   |
LL | ...                   "r"("hello e0669"));
   |                           ^^^^^^^^^^^^^

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0669`.
